--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <body>
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v4.0"></script>
- <div class="header">
+<div class="header">
 	<div class="container">
 		<div class="logo animated wow pulse" data-wow-duration="1000ms" data-wow-delay="500ms">
 			<h1><a href="index.html">KAYABUKI<br><span>江戸時代の古民家レストラン</span></a></h1>
@@ -57,8 +57,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="toggle">
 					<ul class="toggle-menu">
 						<li><a class="active" href="index.html">Home</a></li>
-						<li><a  href="menu.html">Menu</a></li>
-						<li><a  href="contact.html">Info</a></li>
+						<li><a  href="./menu.html">Menu</a></li>
+						<li><a  href="./info.html">Info</a></li>
 					</ul>
 				</div>
 			<script>
