--- a/menu.html
+++ b/menu.html
@@ -43,8 +43,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<a href="#" class="navicon"></a>
 				<div class="toggle">
 					<ul class="toggle-menu">
-						<li><a class="active" href="index.html">Home</a></li>
-						<li><a  href="./menu.html">Menu</a></li>
+						<li><a href="index.html">Home</a></li>
+						<li><a class="active" href="./menu.html">Menu</a></li>
 						<li><a  href="./info.html">Info</a></li>
 					</ul>
 				</div>
